# Solar

./: CMakeLists.txt  README.md  build_debug.bat  build_release.bat
app/: Demo.hpp  main.cpp
app/raytracing/: FrameBuffers.hpp  Pathtracer.cpp  Pathtracer.hpp  PathtracingAreaLight.hpp  PathtracingMaterial.cpp  PathtracingMaterial.hpp  PathtracingMesh.hpp  PathtracingScene.cpp  PathtracingScene.hpp  PbrPathTracer.cpp  ScreenRayTracer.cpp  ScreenRayTracer.hpp  SimplePathTracer.cpp
data/shaders/blit/: Blit.shader
data/shaders/common/: Defines.fx  Tonemapping.fx
data/shaders/pathtracer-refactor/: Bounce.fx  Brdf.fx  BxdfSample.fx  Coordinate.fx  Entity.fx  Geometry.fx  LightSample.fx  Material.fx  PbrPathTracer.fx  PbrPathTracer.shader  Samplers.fx  Scene.fx  SceneTrace.fx  ScreenPathTracer.fx  TraceResult.fx
data/shaders/simple-1/: PathTracerSimple.shader  PostProcessVs.fx  ScreenPathTracer.fx
data/shaders/simple-6-scene/: Camera.fx  Coordinate.fx  Entity.fx  Geometry.fx  Light.fx  PathTracerSimple.fx  PathTracerSimple.shader  Scene.fx  ScreenPathTracer.fx  defines.fx
data/shaders/simple-pt/: Camera.fx  Coordinate.fx  Entity.fx  Geometry.fx  Light.fx  PathTracerSimple.fx  Random.fx  Scene.fx
data/shaders/tonemap/: tonemap.shader
projects/: CMakeLists.txt
projects/app/: CMakeLists.txt
projects/core/: CMakeLists.txt
projects/gui/: CMakeLists.txt
projects/hw/: CMakeLists.txt
projects/imgui/: CMakeLists.txt
src/container/: HashObjectPool.hpp  ObjectPool.hpp
src/core/: Blob.cpp  Blob.hpp  MetaPro.hpp  Random.hpp  Types.hpp
src/ecs/: Transform.hpp
src/fs/: Define.h  DiskFile.hpp  DiskFileDevice.hpp  FileSystem.hpp  IFile.hpp  IFileDevice.hpp  Path.hpp
src/gfx/: Gfx.cpp  Gfx.hpp
src/gfx/command-buffer/: CommandBuffer.hpp  CommandDispatcher.hpp  CommandQueue.hpp  MtRenderer.cpp  MtRenderer.hpp  RenderCommand.hpp  StateCommand.hpp  StateEncode.hpp
src/gfx/d3d11/: DxInterface.hpp  GfxAllocatorDx11.hpp  GfxDeviceDx11.hpp  GfxStatesDx11.hpp
src/gfx/entry/: Command.cpp  Command.hpp  ConstBuffers.cpp  ConstBuffers.hpp  Create.cpp  Create.hpp  Define.hpp  GfxObject.hpp  ShaderBinding.cpp  ShaderBinding.hpp  ShaderCompile.cpp  Submit.cpp  Submit.hpp  Swapchain.hpp  TextureLoader.cpp  TextureLoader.hpp  UniformCache.hpp  UniformHash.cpp  UniformHash.hpp
src/gfx/middle/: GfxTraits.hpp  IGfxAllocator.hpp  IGfxDevice.hpp  StateInterface.hpp
src/gui/: GuiRenderer.cpp  GuiRenderer.hpp  GuiSystem.cpp  GuiSystem.hpp
src/hw/: Clipboard.hpp  Config.hpp  Event.hpp  InputImpl.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  VideoMode.cpp  VideoMode.hpp  VideoModeImpl.hpp  Window.cpp  Window.hpp  WindowHandle.hpp  WindowImpl.cpp  WindowImpl.hpp  WindowStyle.hpp
src/hw/Common/: Rect.hpp  Rect.inl  Sleep.cpp  Sleep.hpp  String.cpp  String.hpp  Time.cpp  Time.hpp  Utf.hpp  Vector2.hpp
src/hw/Common/Win32/: SleepImpl.cpp  SleepImpl.hpp
src/hw/Win32/: InputImpl32.cpp  InputImpl32.hpp  VideoModeImpl.cpp  WindowImplWin32.cpp  WindowImplWin32.hpp
src/math/: BoundingBox.hpp  Math3d.cpp  Math3d.hpp  MathUtil.hpp  Plane.hpp
src/memory/: Allocator.hpp  IAllocator.hpp  LinearAllocator.hpp  SharedPtr.hpp  StackAllocator.hpp  StdProxyAllocator.hpp
src/middleware/camera/: CameraController.hpp  CameraControllerView.hpp
src/render/: Blit.cpp  Blit.hpp  Camera.cpp  Camera.hpp  Filter.cpp  Filter.hpp  FrameBuffer.hpp  Material.hpp  MaterialBlueprint.cpp  MaterialBlueprint.hpp  MaterialInstance.cpp  MaterialInstance.hpp  MaterialProperty.cpp  MaterialProperty.hpp  MaterialView.cpp  MaterialView.hpp  RenderCamera.cpp  RenderCamera.hpp  Shader.cpp  Shader.hpp  ShaderBlock.cpp  ShaderBlock.hpp  ShaderInstance.hpp  ShaderInstanceLoader.hpp  ShaderLoader.cpp  ShaderSystem.cpp  ShaderSystem.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp  Tonemap.cpp  Tonemap.hpp  Viewport.hpp
src/stl/: span.hpp  table.h
src/xml/: Xml.hpp
